[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["Maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
redis = "^5.2.1"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.22"
dishka = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
